# gtk_test_vala

./: meson.build  org.scroker.ValaGtkTest.json
data/: meson.build  org.scroker.ValaGtkTest.appdata.xml.in  org.scroker.ValaGtkTest.desktop.in  org.scroker.ValaGtkTest.gschema.xml
po/: POTFILES  meson.build
src/: gtk_test_vala.gresource.xml  main.vala  meson.build  window.ui  window.vala
